trying to fix the results in search container to be from bottom up on mobile

--- a/main/static/css/main/yb_containers.css
+++ b/main/static/css/main/yb_containers.css
@@ -445,7 +445,7 @@
 
 .yb-spotlight-content-container {
     position: relative;
-    height: 100%; 
+    height: calc(100%-60px); 
     width: 100%;
 }
 
